# group-ring-field

./: README.md
ga/: README  bladeV.cpp  geomobj.h  smartptr.h  symain.cpp  symath.h
gitrepo/gutz/: CMakeLists.txt  GutzSources.cmake  README.txt
gitrepo/gutz/arrayGutz/: CMakeLists.txt  arrayBase.h  arrayOwn1.h  arrayOwn2.h  arrayOwn3.h  arrayOwn4.h  arrayOwn5.h  arrayWrap1.h  arrayWrap2.h  arrayWrap3.h  arrayWrap4.h  arrayWrap5.h
gitrepo/gutz/eventGutz/: cameraEvent.h  deviceEvent.h  deviceState.h  gutzKeyMouse.h  idleEvent.h  keyEvent.h  mouseEvent.h  renderEvent.h
gitrepo/gutz/exceptionGutz/: exception.h
gitrepo/gutz/fileGutz/: fileGutz.cpp
gitrepo/gutz/graphicsGutz/: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Manip.cpp  Manip.h  ManipEventBase.h  ManipEvents.cpp  ManipEvents.h  baseManip.cpp  baseManip.h  vectorGraphics.h
gitrepo/gutz/signalGutz/: command.h  g_signal.h  signalCall.h  signalIF.h  signalSlots.cpp
gitrepo/gutz/simGutz/: Field.h  Integrator.h  Particle.h  RK4.h  Simulation.h
gitrepo/gutz/test/: CMakeLists.txt  barrierTest.cpp  conditionTest.cpp  distribTest.cpp  main.cpp  numberTest.cpp  signalTest.cpp  smartPtrCast.cpp  testBoostThread.cpp  threadTest.cpp  typelistTest.cpp  varCmdArgs.cpp
gitrepo/gutz/threadGutz/: conditionPolicy.h  lock.h  mutexPolicy.h  pthreadGutz.cpp  pthreadGutz.h  qthreadGutz.h  thread.h  threadPolicy.h  threadWorker.cpp  threadWorker.h
gitrepo/toys/geomic/: bladeV.cpp  geomobj.h  smartptr.h  symain.cpp  symath.h  vec.h
